--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -1,4 +1,5 @@
 <section class="contact_PC">
+
   <div class="contact">
     <div class="container">
       <div class="row">
@@ -171,6 +172,26 @@
 </section>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- CONTACT - MOBILE -->
 
 <section class="contact_MB">
@@ -214,19 +235,19 @@
       <div class="row">
 
         <div class="col-12">
-          <div class="web_spider" id="webbb">
-            <div id="web">
-              <div class="vong ngoai">
+          <div class="web_spider_MB" id="webbb_MB">
+            <div id="web_MB">
+              <div class="vong_MB ngoai_MB">
                 <img src="../../../assets/img/contact_serve/ngoai.png" alt="">
                 <h3>Visual Design</h3>
-                <h3>Information Plan</h3>
-                <h3>Wireframe Designing</h3>
+                <h3>Information <br> Plan</h3>
+                <h3>Wireframe<br>Designing</h3>
                 <h3>User testing</h3>
-                <h3>Road map</h3>
+                <h3>Road <br>map</h3>
                 <h3>Frontend -Dev</h3>
               </div>
 
-              <div class="vong giua">
+              <div class="vong_MB giua_MB">
                 <img src="../../../assets/img/contact_serve/giua.png" alt="">
 
                 <h3>Frammer</h3>
@@ -236,7 +257,7 @@
                 <h3>Sketch</h3>
               </div>
 
-              <div class="vong trong">
+              <div class="vong_MB trong_MB">
                 <img src="../../../assets/img/contact_serve/trong.png" alt="">
                 <h3>Webflow</h3>
                 <h3>Rive</h3>
@@ -246,7 +267,7 @@
             </div>
 
           </div>
-          <div class="first_button" id="button_work">
+          <div class="first_button_MB" id="button_work_MB">
               <button href="#web"><h3>My Services</h3></button>
           </div>
 
