--- a/portfolio/src/app/components/shared/footer/footer.component.html
+++ b/portfolio/src/app/components/shared/footer/footer.component.html
@@ -1,27 +1,61 @@
-<div class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-4">
-        <div class="left">
-          <p>2023 © All Rights Reserved.</p>
+<section class="footer_PC">
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <div class="left">
+            <p>2023 © All Rights Reserved.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="col-4">
-        <div class="mid">
-          <p>Insprired <span>♡</span> from <span>Youtube</span></p>
+        <div class="col-4">
+          <div class="mid">
+            <p>Insprired <span>♡</span> from <span>Youtube</span></p>
+          </div>
         </div>
-      </div>
 
-      <div class="col-4">
-        <div class="right">
-          <a href="https://www.facebook.com/aloaceishere"><span>Say Hello</span></a>
+        <div class="col-4">
+          <div class="right">
+            <a href="https://www.facebook.com/aloaceishere"><span>Say Hello</span></a>
+          </div>
         </div>
+
+
+
       </div>
-
-
-
     </div>
   </div>
-</div>
 
+
+</section>
+
+<section class="footer_MB">
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="left">
+            <p>2023 © All Rights Reserved.</p>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="mid">
+            <p>Insprired <span>♡</span> from <a href=""><span>Youtube</span></a></p>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="right">
+            <a href="https://www.facebook.com/aloaceishere"><span>Say Hello</span></a>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+  </div>
+
+
+</section>
