--- a/portfolio/src/app/components/contact/contact.component.css
+++ b/portfolio/src/app/components/contact/contact.component.css
@@ -1,6 +1,3 @@
-
-
-
 @media only screen and (min-width: 1024px){
   .contact_MB{
     display: none;
@@ -181,6 +178,7 @@
   /* SERVE */
   .serve{
     background-image: url(../../../assets/img/background_serve.jpg);
+
   }
 
 
@@ -193,7 +191,7 @@
 
   /* faq */
   .faq{
-    margin-bottom: 100px;
+    margin-bottom: 20%;
   }
   .faq .small_content{
     display: inline-block;
@@ -703,6 +701,84 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 1024px){
   .contact_PC{
     display: none;
@@ -998,7 +1074,7 @@
     font-size: 15px;
   }
   .serve{
-    margin: 100% 0;
+    padding: 65% 0;
   }
 
   .web_spider{
@@ -1017,17 +1093,17 @@
 
 
 
-  .ngoai h3,
-  .trong h3,
-  .giua h3{
-    padding: 20px;
+  .ngoai_MB h3,
+  .trong_MB h3,
+  .giua_MB h3{
+    padding: 8px;
     background-color: var(--black-color);
     color: var(--white-color);
     border-radius: 50px;
-    font-size: 18px;
+    font-size: 10px;
     font-family: istok;
     font-weight: 700;
-
+    text-align: center;
   }
 
 
@@ -1035,32 +1111,32 @@
 
   /* nut ngoai */
 
-  .ngoai h3:nth-of-type(1){
+  .ngoai_MB h3:nth-of-type(1){
     position: absolute;
     left: 25%;
     top: 0%;
     transform: translate(-50%,-50%);
   }
-  .ngoai h3:nth-of-type(2){
+  .ngoai_MB h3:nth-of-type(2){
     position: absolute;
     left: 0;
     top: 50%;
     transform: translate(-50%,-50%);
   }
-  .ngoai h3:nth-of-type(3){
+  .ngoai_MB h3:nth-of-type(3){
     position: absolute;
     top: 100%;
     left: 0;
     transform: translate(50%, -50%);
   }
-  .ngoai h3:nth-of-type(4){
+  .ngoai_MB h3:nth-of-type(4){
     position: absolute;
     left: 75%;
-    top: 99%;
+    top: 101%;
     transform: translate(-50%, -50%);
 
   }
-  .ngoai h3:nth-of-type(5){
+  .ngoai_MB h3:nth-of-type(5){
     position: absolute;
     top: 50%;
     right: 0;
@@ -1068,7 +1144,7 @@
   }
 
 
-  .ngoai h3:nth-of-type(6){
+  .ngoai_MB h3:nth-of-type(6){
     position: absolute;
     left: 75%;
     top: 0%;
@@ -1078,42 +1154,34 @@
 
 
 
-
-
-
-
-
-
-
-
   /* nut giua */
 
-  .giua h3:nth-of-type(1){
+  .giua_MB h3:nth-of-type(1){
     position: absolute;
     left: 50%;
     top: 0;
     transform: translate(-50%,0);
     /* z-index: 1; */
   }
-  .giua h3:nth-of-type(2){
+  .giua_MB h3:nth-of-type(2){
     position: absolute;
     left: 0;
     top: 35%;
     transform: translate(-50%,-50%);
   }
-  .giua h3:nth-of-type(3){
+  .giua_MB h3:nth-of-type(3){
     position: absolute;
-    left: 0;
+    left: -5%;
     top: 100%;
     transform: translate(50%, -50%);
   }
-  .giua h3:nth-of-type(4){
+  .giua_MB h3:nth-of-type(4){
     position: absolute;
     left: 75%;
     top: 100%;
     transform: translate(-30%, -50%);
   }
-  .giua h3:nth-of-type(5){
+  .giua_MB h3:nth-of-type(5){
     position: absolute;
     left: 100%;
     top: 35%;
@@ -1127,20 +1195,20 @@
   /* nut trong */
 
 
-  .trong h3:nth-of-type(1){
+  .trong_MB h3:nth-of-type(1){
     position: absolute;
     left: 50%;
     top: 0;
     transform: translate(-50%,0);
     /* z-index: 1; */
   }
-  .trong h3:nth-of-type(2){
+  .trong_MB h3:nth-of-type(2){
     position: absolute;
     left: 0;
     top: 50%;
     transform: translate(-50%,-50%);
   }
-  .trong h3:nth-of-type(3){
+  .trong_MB h3:nth-of-type(3){
     position: absolute;
     left: 35%;
     top: 98%;
@@ -1148,7 +1216,7 @@
   }
 
 
-  .trong h3:nth-of-type(4){
+  .trong_MB h3:nth-of-type(4){
     position: absolute;
     left: 100%;
     top: 50%;
@@ -1156,12 +1224,7 @@
   }
 
 
-
-
-
-
-
-  .first_button{
+  .first_button_MB{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1169,18 +1232,18 @@
 
   }
 
-  .first_button button{
-    padding: 30px;
+  .first_button_MB button{
+    padding: 10px;
     background-color: var(--black-color);
     color: var(--white-color);
     border-radius: 50px;
-    font-size: 18px;
+    /* font-size: 20px; */
     border: 1px solid var(--black-color);
     cursor: pointer;
   }
 
-  .first_button button h3{
-    font-size: 30px;
+  .first_button_MB button h3{
+    font-size: 10px;
     font-weight: 800;
     font-family: istok;
   }
@@ -1192,64 +1255,58 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  .web_spider{
+  .web_spider_MB{
     display: none;
   }
 
   .show{
     display: block;
   }
-
-  .ngoai,
-  .giua,
-  .trong{
-
+  /* 3 loại vòng */
+  /* .ngoai_MB,
+  .giua_MB,
+  .trong_MB{
     position: absolute;
     left: 50%;
     transform: translate(-50%,-50%);
+  } */
+  .ngoai_MB{
+    width: 310px;
+    height: auto;
   }
-  .ngoai img{
-    height: 650px;
-    width: auto;
+  .giua_MB{
+    width: 185px;
+    height: auto;
+  }
+  .trong_MB{
+    width: 120px;
+    height: auto;
+  }
+
+
+
+  .ngoai_MB img{
+    height: auto;
+    width: 100%;
     position: relative;
   }
 
 
-  .giua img{
-    height: 500px;
-    width: auto;
+  .giua_MB img{
+    height: auto;
+    width: 100%;
     position: relative;
   }
 
-  .trong img{
-    height: 310px;
-    width: auto;
+  .trong_MB img{
+    height: auto;
+    width: 100%;
     position: relative;
   }
 
-
-  .trong{
+  .trong_MB{
     opacity: 0;
     animation: trong 2s forwards;
-
   }
 
   @keyframes trong {
@@ -1266,13 +1323,18 @@
       transform: translate(-50%,-50%) rotate(0) scale(1);
 
     }
+
   }
+
+
+
+
   /* Vòng tròn trong cùng */
 
-  .vong:nth-child(3) h3:nth-of-type(1),
-  .vong:nth-child(3) h3:nth-of-type(2),
-  .vong:nth-child(3) h3:nth-of-type(3),
-  .vong:nth-child(3) h3:nth-of-type(4){
+  .vong_MB:nth-child(3) h3:nth-of-type(1),
+  .vong_MB:nth-child(3) h3:nth-of-type(2),
+  .vong_MB:nth-child(3) h3:nth-of-type(3),
+  .vong_MB:nth-child(3) h3:nth-of-type(4){
     opacity: 0;
     animation: vong_trong_h3 1s forwards;
 
@@ -1289,23 +1351,19 @@
 
 
 
-  .vong:nth-child(3) h3:nth-of-type(1),
-  .vong:nth-child(3) h3:nth-of-type(2),
-  .vong:nth-child(3) h3:nth-of-type(3),
-  .vong:nth-child(3) h3:nth-of-type(4){
+  .vong_MB:nth-child(3) h3:nth-of-type(1),
+  .vong_MB:nth-child(3) h3:nth-of-type(2),
+  .vong_MB:nth-child(3) h3:nth-of-type(3),
+  .vong_MB:nth-child(3) h3:nth-of-type(4){
     animation-delay: 1s;
   }
 
 
 
   /* Vòng tròn giữa */
-
-
-
-  .giua{
+  .giua_MB{
     opacity: 0;
     animation: giua 2s forwards;
-
   }
 
   @keyframes giua {
@@ -1325,11 +1383,11 @@
     }
   }
 
-  .vong:nth-child(2) h3:nth-of-type(1),
-  .vong:nth-child(2) h3:nth-of-type(2),
-  .vong:nth-child(2) h3:nth-of-type(3),
-  .vong:nth-child(2) h3:nth-of-type(4),
-  .vong:nth-child(2) h3:nth-of-type(5){
+  .vong_MB:nth-child(2) h3:nth-of-type(1),
+  .vong_MB:nth-child(2) h3:nth-of-type(2),
+  .vong_MB:nth-child(2) h3:nth-of-type(3),
+  .vong_MB:nth-child(2) h3:nth-of-type(4),
+  .vong_MB:nth-child(2) h3:nth-of-type(5){
     opacity: 0;
     animation: vong_giua_h3 1s forwards;
 
@@ -1344,20 +1402,18 @@
     }
   }
 
-  .vong:nth-child(2) h3:nth-of-type(1),
-  .vong:nth-child(2) h3:nth-of-type(2),
-  .vong:nth-child(2) h3:nth-of-type(3),
-  .vong:nth-child(2) h3:nth-of-type(4),
-  .vong:nth-child(2) h3:nth-of-type(5){
+  .vong_MB:nth-child(2) h3:nth-of-type(1),
+  .vong_MB:nth-child(2) h3:nth-of-type(2),
+  .vong_MB:nth-child(2) h3:nth-of-type(3),
+  .vong_MB:nth-child(2) h3:nth-of-type(4),
+  .vong_MB:nth-child(2) h3:nth-of-type(5){
     animation-delay: 1.5s;
   }
 
 
 
   /* Vòng tròn ngoài cùng */
-
-
-  .ngoai{
+  .ngoai_MB{
     opacity: 0;
     animation: ngoai 2s forwards;
 
@@ -1381,12 +1437,12 @@
   }
 
 
-  .vong:nth-child(1) h3:nth-of-type(1),
-  .vong:nth-child(1) h3:nth-of-type(2),
-  .vong:nth-child(1) h3:nth-of-type(3),
-  .vong:nth-child(1) h3:nth-of-type(4),
-  .vong:nth-child(1) h3:nth-of-type(5),
-  .vong:nth-child(1) h3:nth-of-type(6){
+  .vong_MB:nth-child(1) h3:nth-of-type(1),
+  .vong_MB:nth-child(1) h3:nth-of-type(2),
+  .vong_MB:nth-child(1) h3:nth-of-type(3),
+  .vong_MB:nth-child(1) h3:nth-of-type(4),
+  .vong_MB:nth-child(1) h3:nth-of-type(5),
+  .vong_MB:nth-child(1) h3:nth-of-type(6){
     opacity: 0;
     animation: vong_ngoai_h3 1s forwards;
 
@@ -1401,15 +1457,12 @@
     }
   }
 
-
-
-
-  .vong:nth-child(1) h3:nth-of-type(1),
-  .vong:nth-child(1) h3:nth-of-type(2),
-  .vong:nth-child(1) h3:nth-of-type(3),
-  .vong:nth-child(1) h3:nth-of-type(4),
-  .vong:nth-child(1) h3:nth-of-type(5),
-  .vong:nth-child(1) h3:nth-of-type(6){
+  .vong_MB:nth-child(1) h3:nth-of-type(1),
+  .vong_MB:nth-child(1) h3:nth-of-type(2),
+  .vong_MB:nth-child(1) h3:nth-of-type(3),
+  .vong_MB:nth-child(1) h3:nth-of-type(4),
+  .vong_MB:nth-child(1) h3:nth-of-type(5),
+  .vong_MB:nth-child(1) h3:nth-of-type(6){
     animation-delay: 2s;
   }
 }
