--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -220,9 +220,23 @@
 }
 
 
+
+
+
+
+
+
+
 @media only screen and (max-width: 1024px){
   .project_PC{
     display: none;
+  }
+  .content1,
+  .content2{
+    margin: 5% 0;
+  }
+  .content2:last-child{
+    margin: 10% 0;
   }
   .projects .high_text h1{
     font-family: istok;
@@ -309,7 +323,7 @@
   .small_box_content button:hover{
     background-color: var(--white-color);
     transition: 0.5s;
- 
+
   }
   .small_box_content button:hover a{
     color: var(--black-color);
@@ -321,11 +335,8 @@
   }
 
 
-  .content2{
-    margin: 10% 0;
-  }
 
-  .content2 .sm_box{
+  .content2 .small_content{
 
     padding: 35px;
 
@@ -337,30 +348,30 @@
   }
 
   /* ảnh của content nhỏ */
-  .content2 .sm_box .img{
+  .content2 .big_content .img{
     width: 100%;
     height: 100%;
   }
-  .content2 .sm_box img{
+  .content2 .big_content img{
     width: 100%;
     height: 100%;
     transition: transform 0.5s, filter 1.5s ease-in-out;
   }
 
-  .sm_box:hover .img img {
+  .big_content:hover .img img {
     transform: scale(103%);
   }
 
-  .content2 .divide{
+  .divide{
     display: flex;
 
   }
 
-  .sm_box .divide{
+  .content2 .big_content .divide{
     display: flex;
     position: relative;
   }
-  .sm_box .divide img{
+  .big_content .divide img{
     height: 35px;
     width: 35px;
     position: absolute;
@@ -369,18 +380,18 @@
   }
 
   /* icon figma */
-  .content2 .divide img{
+  .divide img{
     width: 40px;
     height: 40px;
   }
-  .content2 .divide h3{
+  .divide h3{
     font-size: 25px;
 
   }
 
 
 
-  .content2 .sm_box p{
+  .content2 .big_content p{
     color: var(--red-color);
     font-size: 20px;
     font-family: istok;
@@ -388,7 +399,7 @@
   }
 
   /* chỉnh chữ h3 to hơn */
-  .content2 .sm_box h3{
+  .content2 .big_content h3{
     color: var(--black-color);
     font-size: 30px;
     font-family: istok;
@@ -398,7 +409,7 @@
 
 
   /* chỉnh chữ p của thẻ a */
-  .content2 .small_content .sm_box a{
+  .content2  .big_content a{
     color: var(--black-color);
     font-size: 16px;
     font-family: istok;
@@ -408,7 +419,7 @@
 
 
   /* hover vào thẻ p của thẻ a */
-  .content2 .sm_box a::before{
+  .content2 .big_content a::before{
     position: absolute;
     content: "";
     background-color: var(--black-color);
@@ -420,10 +431,10 @@
 
 
   /* hover vào thẻ p của thẻ a */
-  .content2 .small_content .sm_box a:hover {
+  .content2 .big_content a:hover {
     color: var(--red-color);
   }
-  .content2 .sm_box a:hover:before{
+  .content2 .big_content a:hover:before{
     position: absolute;
     content: "";
     background-color: var(--red-color);
