--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -190,35 +190,23 @@
         </div>
         <!-- line 2 -->
         <div class="content2">
-
-          <div class="small_content">
+          <div class="big_content">
             <div class="row">
-              <div class="col-6">
-                <div class="sm_box">
-                  <div class="img">
-                    <img src="../../../assets/img/project_img/small_img.png" alt="">
-                  </div>
-                  <p>Website Template</p>
-                  <div class="divide">
-
-                    <h3>NFT collection Website</h3>
-                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
-                  </div>
-
-                  <a href="">Visit</a>
+              <div class="col-12">
+                <div class="img">
+                  <img src="../../../assets/img/project_img/small_img.png" alt="">
                 </div>
               </div>
 
-              <div class="col-6">
-                <div class="sm_box">
-                  <div class="img">
-                    <img src="../../../assets/img/project_img/small_img.png" alt="">
-                  </div>
+              <div class="col-12">
+                <div class="content_right">
                   <p>Website Template</p>
                   <div class="divide">
+
                     <h3>NFT collection Website</h3>
                     <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                   </div>
+
                   <a href="">Visit</a>
                 </div>
               </div>
@@ -226,6 +214,32 @@
           </div>
 
         </div>
+        <div class="content2">
+          <div class="big_content">
+            <div class="row">
+              <div class="col-12">
+                <div class="img">
+                  <img src="../../../assets/img/project_img/small_img.png" alt="">
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="content_right">
+                  <p>Website Template</p>
+                  <div class="divide">
+
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+
+                  <a href="">Visit</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
         <!-- line 3 -->
         <div class="content1">
 
@@ -254,34 +268,23 @@
         </div>
         <!-- line 4 -->
         <div class="content2">
-
-          <div class="small_content">
+          <div class="big_content">
             <div class="row">
-              <div class="col-6">
-                <div class="sm_box">
-                  <div class="img">
-                    <img src="../../../assets/img/project_img/small_img.png" alt="">
-                  </div>
-                  <p>Website Template</p>
-                  <div class="divide">
-                    <h3>NFT collection Website</h3>
-                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
-                  </div>
-
-                  <a href="">Visit</a>
+              <div class="col-12">
+                <div class="img">
+                  <img src="../../../assets/img/project_img/small_img.png" alt="">
                 </div>
               </div>
 
-              <div class="col-6">
-                <div class="sm_box">
-                  <div class="img">
-                    <img src="../../../assets/img/project_img/small_img.png" alt="">
-                  </div>
+              <div class="col-12">
+                <div class="content_right">
                   <p>Website Template</p>
                   <div class="divide">
+
                     <h3>NFT collection Website</h3>
                     <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                   </div>
+
                   <a href="">Visit</a>
                 </div>
               </div>
@@ -289,7 +292,31 @@
           </div>
 
         </div>
+        <div class="content2">
+          <div class="big_content">
+            <div class="row">
+              <div class="col-12">
+                <div class="img">
+                  <img src="../../../assets/img/project_img/small_img.png" alt="">
+                </div>
+              </div>
 
+              <div class="col-12">
+                <div class="content_right">
+                  <p>Website Template</p>
+                  <div class="divide">
+
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+
+                  <a href="">Visit</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
 
       </div>
     </div>
