--- a/portfolio/src/app/components/contact/contact.component.css
+++ b/portfolio/src/app/components/contact/contact.component.css
@@ -779,7 +779,7 @@
 
 
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 1023px){
   .contact_PC{
     display: none;
   }
@@ -828,7 +828,7 @@
     border: 1px solid rgb(0,0,0, 50%);
     box-shadow: 10px 10px 0px 0px black;
     border-radius: 10px;
-    height: 525px;
+    height: fit-content;
     width: 100%;
     position: relative;
     animation: fadeInFromTop 0.5s linear forwards, floating ease 4s infinite;
@@ -1043,10 +1043,13 @@
     display: none;
   }
 
+  #small_box_mb{
+    padding-top: 20px;
+  }
+
   .item-box{
     margin-top: 30px;
     position: relative;
-    width: 1050px;
     /* left: -61%; */
     display: flex;
     height: fit-content;
@@ -1054,6 +1057,10 @@
     overflow-x: hidden;
   }
 
+  #btn_mb{
+    position: relative;
+    top: 10px;
+  }
 
   /* .faq_content li .small_box li{
 
@@ -1067,6 +1074,10 @@
     text-align: center;
     margin-bottom: 40px;
     font-weight: 800;
+  }
+
+  .box_left{
+    width: 400px;
   }
 
   .box_left u{
@@ -1106,7 +1117,15 @@
     text-align: center;
   }
 
+  .giua_MB img{
+    position: relative;
+    top: -17px;
+  }
 
+  .trong_MB img{
+    position: relative;
+    top: -10px;
+  }
 
 
   /* nut ngoai */
@@ -1119,7 +1138,7 @@
   }
   .ngoai_MB h3:nth-of-type(2){
     position: absolute;
-    left: 0;
+    left: 3%;
     top: 50%;
     transform: translate(-50%,-50%);
   }
@@ -1159,32 +1178,32 @@
   .giua_MB h3:nth-of-type(1){
     position: absolute;
     left: 50%;
-    top: 0;
+    top: -12%;
     transform: translate(-50%,0);
     /* z-index: 1; */
   }
   .giua_MB h3:nth-of-type(2){
     position: absolute;
     left: 0;
-    top: 35%;
+    top: 30%;
     transform: translate(-50%,-50%);
   }
   .giua_MB h3:nth-of-type(3){
     position: absolute;
-    left: -5%;
-    top: 100%;
+    left: -11%;
+    top: 91%;
     transform: translate(50%, -50%);
   }
   .giua_MB h3:nth-of-type(4){
     position: absolute;
     left: 75%;
-    top: 100%;
+    top: 92%;
     transform: translate(-30%, -50%);
   }
   .giua_MB h3:nth-of-type(5){
     position: absolute;
     left: 100%;
-    top: 35%;
+    top: 30%;
     transform: translate(-50%,-50%);
   }
 
@@ -1198,20 +1217,20 @@
   .trong_MB h3:nth-of-type(1){
     position: absolute;
     left: 50%;
-    top: 0;
+    top: -11%;
     transform: translate(-50%,0);
     /* z-index: 1; */
   }
   .trong_MB h3:nth-of-type(2){
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 46%;
     transform: translate(-50%,-50%);
   }
   .trong_MB h3:nth-of-type(3){
     position: absolute;
     left: 35%;
-    top: 98%;
+    top: 80%;
     transform: translate(-25%, -50%);
   }
 
@@ -1219,14 +1238,14 @@
   .trong_MB h3:nth-of-type(4){
     position: absolute;
     left: 100%;
-    top: 50%;
+    top: 43%;
     transform: translate(-50%, -50%);
   }
 
 
   .first_button_MB{
     position: absolute;
-    top: 50%;
+    top: -1000%;
     left: 50%;
     transform: translate(-50%,-50%);
 
@@ -1239,7 +1258,7 @@
     border-radius: 50px;
     /* font-size: 20px; */
     border: 1px solid var(--black-color);
-    cursor: pointer;
+    cursor: pointer;    
   }
 
   .first_button_MB button h3{
@@ -1271,11 +1290,11 @@
     transform: translate(-50%,-50%);
   } */
   .ngoai_MB{
-    width: 400px;
+    width: 355px;
     height: auto;
   }
   .giua_MB{
-    width: 250px;
+    width: 220px;
     height: auto;
   }
   .trong_MB{
