--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -206,22 +206,22 @@
         </div>
         <div class="col-12">
           <div class="form_message">
-            <div class="form" id="form">
+            <div class="form" id="form_mb">
               <h3>Send us a message</h3>
               <div class="form_group">
-                <input type="text" id="full-name" name="full-name" placeholder="Full name*" onblur="form_an()" required>
+                <input type="text" id="full-name_mb" name="full-name" placeholder="Full name*" onblur="form_an()" required>
               </div>
 
               <div class="form_group">
-                <input type="email" id="email" name="email" placeholder="Email*" required>
+                <input type="email" id="email_mb" name="email" placeholder="Email*" required>
               </div>
 
               <div class="form_group">
-                <input type="subject" id="subject1" name="subject" placeholder="Subjects" required>
+                <input type="subject" id="subject1_mb" name="subject" placeholder="Subjects" required>
               </div>
 
               <div class="form_group">
-                <input type="subject" id="subject2" name="subject" placeholder="Subjects" required>
+                <input type="subject" id="subject2_mb" name="subject" placeholder="Subjects" required>
               </div>
               <button><a href="">Contact me</a></button>
             </div>
@@ -292,11 +292,11 @@
                 <div class="box_left ">
                   <p>If I weren't in the design field, what do I do for a living?</p>
                 </div>
-                <div class="box_right">
-                  <button id="btn"><u>View more</u></button>
-                </div>
+                <!-- <div class="box_right">
+                  <button id="btn_mb"><u>View more</u></button>
+                </div> -->
               </div>
-              <div class="small_box" id="small_box">
+              <div id="small_box_mb">
                 As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
               </div>
              </li>
