--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -11,6 +11,7 @@
         </div>
         <div class="col-6">
           <div class="form_message">
+
             <div class="form" id="form">
               <h3>Send us a message</h3>
               <div class="form_group">
@@ -206,6 +207,7 @@
         </div>
         <div class="col-12">
           <div class="form_message">
+            <img src="../../../assets/img/contact_img.png" alt="">
             <div class="form" id="form_mb">
               <h3>Send us a message</h3>
               <div class="form_group">
