--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -298,66 +298,54 @@
                   <button id="btn_mb"><u>View more</u></button>
                 </div> -->
               </div>
-              <div id="small_box_mb">
-                As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
-              </div>
-             </li>
-
-             <!-- <li class="small_content">
-              <div class="box_main">
-                <div class="box_right">
-                  <p>My favourite projects in my design career</p>
-                </div>
-                <div class="box_left">
-                  <button id="btn1"><u>View more</u></button>
-                </div>
-              </div>
-              <div class="small_box" id="small_box1">
+              <div class="small_box_mb">
                 As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
               </div>
              </li>
 
              <li class="small_content">
               <div class="box_main">
-                <div class="box_right">
+                <div class="box_left">
                   <p>My favourite projects in my design career</p>
                 </div>
-                <div class="box_left">
-                  <button id="btn2"><u>View more</u></button>
-                </div>
               </div>
-              <div class="small_box" id="small_box2">
+              <div class="small_box_mb">
                 As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
               </div>
              </li>
 
              <li class="small_content">
               <div class="box_main">
-                <div class="box_right">
+                <div class="box_left">
+                  <p>My favourite projects in my design career</p>
+                </div>
+              </div>
+              <div class="small_box_mb">
+                As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
+              </div>
+             </li>
+
+             <li class="small_content">
+              <div class="box_main">
+                <div class="box_left">
                   <p>How do I typically stay motivated and inspired in my work?</p>
                 </div>
-                <div class="box_left">
-                  <button id="btn3"><u>View more</u></button>
-                </div>
               </div>
-              <div class="small_box" id="small_box3">
+              <div class="small_box_mb">
                 As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
               </div>
              </li>
 
              <li class="small_content">
               <div class="box_main">
-                <div class="box_right">
+                <div class="box_left">
                   <p>If I could change something in the design industry, what would I change?</p>
                 </div>
-                <div class="box_left">
-                  <button id="btn4"><u>View more</u></button>
-                </div>
               </div>
-              <div class="small_box" id="small_box4">
+              <div class="small_box_mb">
                 As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
               </div>
-             </li> -->
+             </li>
           </ul>
         </div>
       </div>
