--- a/portfolio/src/app/components/about/about.component.css
+++ b/portfolio/src/app/components/about/about.component.css
@@ -2008,7 +2008,7 @@
     left: 10%;
     top: 9%;
     transform: translateX(-50%);
-    animation: moveline 3s linear forwards;
+    animation: moveline1 3s linear forwards;
   }
 
   @keyframes moveline{
@@ -2134,8 +2134,11 @@
 
 
   .timeline_TABLET .container:nth-child(1) .anima1_TABLET{
-    animation: anima1 1s linear forwards;
     opacity: 0;
+  }
+  
+  .anima1_run_TABLET{
+    animation: anima1 1s linear forwards;
   }
 
 
@@ -2150,8 +2153,11 @@
     }
   }
   .timeline_TABLET .container:nth-child(2) .anima2_TABLET{
-    animation: anima2 1s linear forwards;
     opacity: 0;
+  }
+  
+  .anima2_run_TABLET{
+    animation: anima2 1s linear forwards;
   }
 
 
@@ -2170,8 +2176,11 @@
 
 
   .timeline_TABLET .container:nth-child(3) .anima3_TABLET{
-    animation: anima3 1s linear forwards;
     opacity: 0;
+  }
+  
+  .anima3_run_TABLET{
+    animation: anima3 1s linear forwards;
   }
 
 
@@ -2276,14 +2285,21 @@
     animation: moveline 3s linear forwards;
   }
 
-
+  @keyframes moveline1 {
+    0%{
+      height: 0;
+    }
+    100%{
+      height: 65%;
+    }
+  }
 
   @keyframes moveline {
     0%{
       height: 0;
     }
     100%{
-      height: 65%;
+      height: 85%;
     }
   }
 
