them component subprojects

--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -19,7 +19,7 @@
           </div>
           <div class="col-4">
             <div class="mid">
-              <img src="../../../assets/img/img_about.png" alt="">
+              <img src="../../../assets/img/img_about.jpg" alt="">
             </div>
           </div>
           <div class="col-4">
