--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -43,11 +43,11 @@
                     <div class="img">
                       <img src="../../../assets/img/project_img/small_img.png" alt="">
                     </div>
+                    <p>Website Template</p>
                     <div class="divide">
-                      <h3>NFT collection Website</h3>
+                      <h3>Starlab Group Projects</h3>
                       <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                     </div>
-                    <p>Website Template</p>
                     <a href="">Visit</a>
                   </div>
                 </div>
@@ -59,7 +59,7 @@
                     </div>
                     <p>Website Template</p>
                     <div class="divide">
-                      <h3>NFT collection Website</h3>
+                      <h3>EZ-Games</h3>
                       <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                     </div>
                     <a href="">Visit</a>
@@ -82,8 +82,8 @@
 
                 <div class="col-6">
                   <div class="content_right">
-                    <p>Featured Project</p>
-                    <h3>Hanoi Start-Up Brother FC</h3>
+                    <p>Website Template</p>
+                    <h3>Lan Health</h3>
                     <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
                     <div class="small_box_content">
                       <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
@@ -107,7 +107,7 @@
                     </div>
                     <p>Website Template</p>
                     <div class="divide">
-                      <h3>NFT collection Website</h3>
+                      <h3>Sun Group Projects</h3>
                       <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                     </div>
                     <a href="">Visit</a>
@@ -120,7 +120,7 @@
                       <img src="../../../assets/img/project_img/small_img.png" alt="">
                       <p>Website Template</p>
                       <div class="divide">
-                        <h3>NFT collection Website</h3>
+                        <h3>TV Cast 3</h3>
                         <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                       </div>
                       <a href="">Visit</a>
@@ -203,7 +203,7 @@
                   <p>Website Template</p>
                   <div class="divide">
 
-                    <h3>NFT collection Website</h3>
+                    <h3>Starlab Group Projects</h3>
                     <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                   </div>
 
@@ -228,7 +228,7 @@
                   <p>Website Template</p>
                   <div class="divide">
 
-                    <h3>NFT collection Website</h3>
+                    <h3>EZ-Games</h3>
                     <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                   </div>
 
@@ -281,7 +281,7 @@
                   <p>Website Template</p>
                   <div class="divide">
 
-                    <h3>NFT collection Website</h3>
+                    <h3>Sun Group Projects</h3>
                     <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                   </div>
 
@@ -306,7 +306,7 @@
                   <p>Website Template</p>
                   <div class="divide">
 
-                    <h3>NFT collection Website</h3>
+                    <h3>TV Cast 3</h3>
                     <img src="../../../assets/img/project_img/figma_icon.png" alt="">
                   </div>
 
